checker/tests/nullness-extra/issue559/Expected.txt
warning: AnnotationFileParser: in file myjdk.astub at line 6 ignored existing annotations on type: T[ extends @Initialized @Nullable Object super @Initialized @Nullable Void]
Issue559.java:10: error: [argument.type.incompatible] incompatible types in argument.
        o.orElse(null);
                 ^
  found   : null
  required: @Initialized @NonNull String
1 error
1 warning
